# omega-smartsensor-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/: _assert.h  alarm.c  alarm.h  datalog.c  datalog.h  function_block.c  function_block.h  i2c_registers.h  log.h  op.c  op.h  port.c  port.h  registers.c  registers.h  registers_i2c.h  smartsensor.c  smartsensor.h  smartsensor_errors.h  smartsensor_private.c  smartsensor_private.h
docs/: contiki_build.md
examples/: basic_sensor_i2c.c
examples/contiki/: .gitignore  Makefile  Makefile.configurations  basic_sensor.c  basic_sensor.simplelink
examples/linux/: CMakeLists.txt  basic_sensor.c  basic_sensor_i2c.c  debug.c  example_alarm.c  example_datalog.c  junk.c
lib/inc/common/: common.h  errors.h  log.h
lib/inc/hw/: bus.h  gpio.h
lib/inc/hw/linux/: bus_i2c_smbus.h  bus_uart_modbus.h  gpio_sysfs.h
lib/inc/hw/stm32/: bus_stm32_i2c.h
lib/inc/hw/ti/: bus_ti_i2c.h  bus_ti_uart_modbus.h
lib/inc/platform/: memory.h  mutex.h  timer.h
lib/src/common/: log.c
lib/src/hw/: bus.c  gpio.c
lib/src/hw/linux/: bus_i2c_smbus.c  bus_uart_modbus.c  gpio_sysfs.c
lib/src/hw/stm32/: bus_stm32_i2c.c
lib/src/hw/ti/: bus_ti_i2c.c  bus_ti_uart_modbus.c
lib/src/platform/contiki/: contiki_memory.c  contiki_mutex.c  contiki_timer.c
lib/src/platform/freertos/: freertos_memory.c  freertos_mutex.c  freertos_timer.c
lib/src/platform/linux/: linux_memory.c  linux_mutex.c  linux_timer.c
port/: CMakeLists.txt  port.h
port/contiki/: README.md  port_contiki.c
port/freertos/: freertos_event.c  freertos_timer.c  port_freertos.h
port/linux/: event.c  linux_event.c  linux_gpio.c  linux_i2c.c  linux_modbus.c  linux_platform.h  linux_private.h  linux_timer.c  port_dio.c  port_event.c  port_i2c.c  port_linux.c  port_linux.h  port_platform.c  port_timer.c  queue.c
port/lrwan1/: port_lrwan1.c
port/platform/: linux.c  linux.h  stm32_freertos.c  stm32_freertos.h
port/stm32/: port_stm32.h  stm32_gpio.c  stm32_i2c.c
tests/: CMakeLists.txt  clock_stretch.c  registers_integrity.c  test_interface.c  test_linux_timer.c  test_probe_attach.c  unit_test.h
